--- a/Assignment 2/assignment2.ipynb
+++ b/Assignment 2/assignment2.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Assignment 2 - Swarm Intelligence"
+    "# Assignment 2 - Swarm Intelligence\n",
+    "To reproduce our results, you can simply run all cells in this notebook. A seed was added for reproduceability."
    ]
   },
   {
