--- a/Project/openai.ipynb
+++ b/Project/openai.ipynb
@@ -18,10 +18,124 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Marlous\\anaconda3\\envs\\natcom\\lib\\site-packages\\flatbuffers\\compat.py:19: DeprecationWarning: the imp module is deprecated in favour of importlib; see the module's documentation for alternative uses\n",
+      "  import imp\n"
+     ]
+    }
+   ],
    "source": [
-    "import numpy\n",
-    "import gym"
+    "import gym\n",
+    "import numpy as np\n",
+    "from model import DQN\n",
+    "from gym.wrappers import AtariPreprocessing, FrameStack"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Initiate Environment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<gym.wrappers.frame_stack.LazyFrames at 0x262ab8903b8>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "env = gym.make('BreakoutNoFrameskip-v4')\n",
+    "env = AtariPreprocessing(env, noop_max=12)\n",
+    "env = FrameStack(env, num_stack=4)\n",
+    "env.reset()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Environment Details"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of actions: 4\n",
+      "Action meanings: ['NOOP', 'FIRE', 'RIGHT', 'LEFT']\n",
+      "State dimensions: (4, 84, 84)\n"
+     ]
+    }
+   ],
+   "source": [
+    "n_actions = env.action_space.n\n",
+    "actions_meanings = env.env.get_action_meanings()\n",
+    "state_dim = env.observation_space.shape\n",
+    "print(f\"Number of actions: {n_actions}\")\n",
+    "print(f\"Action meanings: {actions_meanings}\")\n",
+    "print(f\"State dimensions: {state_dim}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Play Breakout"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reward: 1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "episode_reward = 0\n",
+    "\n",
+    "while True:\n",
+    "    action = env.action_space.sample()\n",
+    "    new_img, reward, done, info = env.step(action)\n",
+    "    new_img = new_img.__array__().transpose(1,2,0)\n",
+    "    _, reward, done, _ = env.step(action)\n",
+    "    episode_reward += reward\n",
+    "    # print(action)\n",
+    "    if done:\n",
+    "        print('Reward: %s' % episode_reward)\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## DQN Model Architecture"
    ]
   },
   {
@@ -33,274 +147,59 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Box(0, 255, (210, 160, 3), uint8)\n",
-      "Reward: 1.0\n"
+      "Model: \"sequential\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " conv2d (Conv2D)             (None, 20, 20, 32)        8224      \n",
+      "                                                                 \n",
+      " batch_normalization (BatchN  (None, 20, 20, 32)       128       \n",
+      " ormalization)                                                   \n",
+      "                                                                 \n",
+      " activation (Activation)     (None, 20, 20, 32)        0         \n",
+      "                                                                 \n",
+      " conv2d_1 (Conv2D)           (None, 9, 9, 64)          32832     \n",
+      "                                                                 \n",
+      " batch_normalization_1 (Batc  (None, 9, 9, 64)         256       \n",
+      " hNormalization)                                                 \n",
+      "                                                                 \n",
+      " activation_1 (Activation)   (None, 9, 9, 64)          0         \n",
+      "                                                                 \n",
+      " conv2d_2 (Conv2D)           (None, 7, 7, 64)          36928     \n",
+      "                                                                 \n",
+      " batch_normalization_2 (Batc  (None, 7, 7, 64)         256       \n",
+      " hNormalization)                                                 \n",
+      "                                                                 \n",
+      " activation_2 (Activation)   (None, 7, 7, 64)          0         \n",
+      "                                                                 \n",
+      " flatten (Flatten)           (None, 3136)              0         \n",
+      "                                                                 \n",
+      " dense (Dense)               (None, 512)               1606144   \n",
+      "                                                                 \n",
+      " batch_normalization_3 (Batc  (None, 512)              2048      \n",
+      " hNormalization)                                                 \n",
+      "                                                                 \n",
+      " activation_3 (Activation)   (None, 512)               0         \n",
+      "                                                                 \n",
+      " dense_1 (Dense)             (None, 4)                 2052      \n",
+      "                                                                 \n",
+      " batch_normalization_4 (Batc  (None, 4)                16        \n",
+      " hNormalization)                                                 \n",
+      "                                                                 \n",
+      " activation_4 (Activation)   (None, 4)                 0         \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 1,688,884\n",
+      "Trainable params: 1,687,532\n",
+      "Non-trainable params: 1,352\n",
+      "_________________________________________________________________\n",
+      "None\n"
      ]
     }
    ],
    "source": [
-    "env = gym.make('Breakout-v4')\n",
-    "env.reset()\n",
-    "episode_reward = 0\n",
-    "i = 0\n",
-    "while True:\n",
-    "    # print(i)\n",
-    "    i += 1\n",
-    "    action = env.action_space.sample()\n",
-    "    # print(env.action_space)\n",
-    "    # print(env.observation_space)\n",
-    "    # print(env.env.get_action_meanings())\n",
-    "    # print(action)\n",
-    "    _, reward, done, _ = env.step(action)\n",
-    "    episode_reward += reward\n",
-    "    if done:\n",
-    "        print('Reward: %s' % episode_reward)\n",
-    "        break\n",
-    "\n",
-    "# https://www.digitalocean.com/community/tutorials/how-to-build-atari-bot-with-openai-gym\n",
-    "# https://colab.research.google.com/github/GiannisMitr/DQN-Atari-Breakout/blob/master/dqn_atari_breakout.ipynb\n",
-    "# https://www.tensorflow.org/agents/tutorials/1_dqn_tutorial"
+    "model = DQN()\n",
+    "print(model.summary())"
    ]
   },
   {
@@ -330,7 +229,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.12"
+   "version": "3.7.11"
   },
   "orig_nbformat": 4
  },
