Added model input/output

--- a/Project/openai.ipynb
+++ b/Project/openai.ipynb
@@ -50,7 +50,7 @@
     {
      "data": {
       "text/plain": [
-       "<gym.wrappers.frame_stack.LazyFrames at 0x262ab8903b8>"
+       "<gym.wrappers.frame_stack.LazyFrames at 0x2d96c08f2c8>"
       ]
      },
      "execution_count": 2,
@@ -100,47 +100,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Play Breakout"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Reward: 1.0\n"
-     ]
-    }
-   ],
-   "source": [
-    "episode_reward = 0\n",
-    "\n",
-    "while True:\n",
-    "    action = env.action_space.sample()\n",
-    "    new_img, reward, done, info = env.step(action)\n",
-    "    new_img = new_img.__array__().transpose(1,2,0)\n",
-    "    _, reward, done, _ = env.step(action)\n",
-    "    episode_reward += reward\n",
-    "    # print(action)\n",
-    "    if done:\n",
-    "        print('Reward: %s' % episode_reward)\n",
-    "        break"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## DQN Model Architecture"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -200,6 +165,43 @@
    "source": [
     "model = DQN()\n",
     "print(model.summary())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Play Breakout"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reward: 1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "episode_reward = 0\n",
+    "\n",
+    "while True:\n",
+    "    action = env.action_space.sample()\n",
+    "    new_img, reward, done, info = env.step(action)\n",
+    "    new_img = new_img.__array__().transpose(1,2,0)\n",
+    "    new_img = np.expand_dims(new_img, axis=0)\n",
+    "    output = np.argmax(model(new_img).numpy())\n",
+    "    _, reward, done, _ = env.step(action)\n",
+    "    episode_reward += reward\n",
+    "\n",
+    "    if done:\n",
+    "        print('Reward: %s' % episode_reward)\n",
+    "        break"
    ]
   },
   {
