Added project code progress

--- a/Project/openai.ipynb
+++ b/Project/openai.ipynb
@@ -23,6 +23,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "c:\\Users\\Marlous\\anaconda3\\envs\\natcom\\lib\\site-packages\\gym\\envs\\registration.py:424: UserWarning: \u001b[33mWARN: Custom namespace `ALE` is being overridden by namespace `ALE`. If you are developing a plugin you shouldn't specify a namespace in `register` calls. The namespace is specified through the entry point package metadata.\u001b[0m\n",
+      "  f\"Custom namespace `{spec.namespace}` is being overridden \"\n",
       "c:\\Users\\Marlous\\anaconda3\\envs\\natcom\\lib\\site-packages\\flatbuffers\\compat.py:19: DeprecationWarning: the imp module is deprecated in favour of importlib; see the module's documentation for alternative uses\n",
       "  import imp\n"
      ]
@@ -32,7 +34,16 @@
     "import gym\n",
     "import numpy as np\n",
     "from model import DQN\n",
-    "from gym.wrappers import AtariPreprocessing, FrameStack"
+    "from gym.wrappers import AtariPreprocessing, FrameStack\n",
+    "import matplotlib.pyplot as plt\n",
+    "import tensorflow as tf"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Parameters"
    ]
   },
   {
@@ -50,7 +61,7 @@
     {
      "data": {
       "text/plain": [
-       "<gym.wrappers.frame_stack.LazyFrames at 0x2d96c08f2c8>"
+       "<gym.wrappers.frame_stack.LazyFrames at 0x1e8d7880228>"
       ]
      },
      "execution_count": 2,
@@ -60,7 +71,7 @@
    ],
    "source": [
     "env = gym.make('BreakoutNoFrameskip-v4')\n",
-    "env = AtariPreprocessing(env, noop_max=12)\n",
+    "env = AtariPreprocessing(env, noop_max=30)\n",
     "env = FrameStack(env, num_stack=4)\n",
     "env.reset()"
    ]
@@ -178,30 +189,165 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_frames(frames):\n",
+    "    fig, axs = plt.subplots(1, frames.shape[2])\n",
+    "    for i, ax in enumerate(axs.flat):\n",
+    "        ax.imshow(frames[:,:,i], cmap=\"gray\")\n",
+    "        ax.axis(\"off\")\n",
+    "        ax.set_title(f\"frame {i+1}\")\n",
+    "    plt.savefig(\"processed_input.png\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_frames(observation):\n",
+    "    observation = observation.__array__().transpose(1,2,0)\n",
+    "    observation = np.expand_dims(observation, axis=0)\n",
+    "    \n",
+    "    return observation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def episode(model, max_step=10000):\n",
+    "    env = gym.make('BreakoutNoFrameskip-v4')\n",
+    "    env = AtariPreprocessing(env, noop_max=30)\n",
+    "    env = FrameStack(env, num_stack=4)\n",
+    "    frames = get_frames(env.reset())\n",
+    "\n",
+    "    episode_reward = 0\n",
+    "    step = 0\n",
+    "\n",
+    "    while step < max_step:\n",
+    "        step += 1\n",
+    "\n",
+    "        action = np.argmax(model(frames).numpy())\n",
+    "        frames, reward, done, info = env.step(action)\n",
+    "        frames = get_frames(frames)\n",
+    "\n",
+    "        episode_reward += reward\n",
+    "\n",
+    "        if done: \n",
+    "            frames = get_frames(env.reset())\n",
+    "\n",
+    "    return episode_reward\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_weights(parents):\n",
+    "    W = [np.log(parents - 0.5) - np.log(i) for i in range(1, parents+1)]\n",
+    "    W /= np.sum(W)\n",
+    "    \n",
+    "    return W"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_start_parameters(model):\n",
+    "    parameters = model.get_weights()\n",
+    "\n",
+    "    return np.concatenate(parameters, axis=None)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_model_weights(theta, mut_stepsize, e):\n",
+    "    model = DQN()\n",
+    "    parameters = model.get_weights()\n",
+    "    new_weights = []\n",
+    "    start_idx = 0\n",
+    "    w = theta + mut_stepsize * e\n",
+    "\n",
+    "    for p in parameters:\n",
+    "        n = len(p.flatten())\n",
+    "        new_weights.append(w[start_idx:(start_idx+n)].reshape(p.shape))\n",
+    "        start_idx += n\n",
+    "\n",
+    "    model.set_weights(new_weights)\n",
+    "    \n",
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def CES(model, mut_stepsize, parents, n_offspring, iterations):\n",
+    "    theta = get_start_parameters(model)\n",
+    "    W = get_weights(parents)\n",
+    "    best_r = np.zeros((iterations))\n",
+    "    \n",
+    "    for t in range(iterations):\n",
+    "        print('Iteration: ',t+1)\n",
+    "        e = np.zeros((n_offspring, theta.shape[0]))\n",
+    "        r = np.zeros((n_offspring))\n",
+    "\n",
+    "        for i in range(n_offspring):\n",
+    "            e[i] = np.random.normal(0, mut_stepsize**2, size=theta.shape)\n",
+    "            new_model = get_model_weights(theta, mut_stepsize, e[i])\n",
+    "            r[i] = episode(new_model)\n",
+    "\n",
+    "        best_rs = r.argsort()\n",
+    "        best_r[t] = np.max(r)\n",
+    "        best_es = e[best_rs][:parents]\n",
+    "        \n",
+    "        theta += mut_stepsize * np.sum([W[i] * best_es[i] for i in range(len(W))], axis=0)\n",
+    "\n",
+    "    return best_r"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Reward: 1.0\n"
+      "Iteration:  1\n"
      ]
     }
    ],
    "source": [
-    "episode_reward = 0\n",
-    "\n",
-    "while True:\n",
-    "    action = env.action_space.sample()\n",
-    "    new_img, reward, done, info = env.step(action)\n",
-    "    new_img = new_img.__array__().transpose(1,2,0)\n",
-    "    new_img = np.expand_dims(new_img, axis=0)\n",
-    "    output = np.argmax(model(new_img).numpy())\n",
-    "    _, reward, done, _ = env.step(action)\n",
-    "    episode_reward += reward\n",
-    "\n",
-    "    if done:\n",
-    "        print('Reward: %s' % episode_reward)\n",
-    "        break"
+    "model = DQN()\n",
+    "rewards = CES(model, 0.1, 10, 20, 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(rewards)"
    ]
   },
   {
