--- a/Project/openai.ipynb
+++ b/Project/openai.ipynb
@@ -36,7 +36,7 @@
     "from model import DQN\n",
     "from gym.wrappers import AtariPreprocessing, FrameStack\n",
     "import matplotlib.pyplot as plt\n",
-    "import tensorflow as tf"
+    "from tqdm import tqdm"
    ]
   },
   {
@@ -61,7 +61,7 @@
     {
      "data": {
       "text/plain": [
-       "<gym.wrappers.frame_stack.LazyFrames at 0x1e8d7880228>"
+       "<gym.wrappers.frame_stack.LazyFrames at 0x19b36b7a6d8>"
       ]
      },
      "execution_count": 2,
@@ -220,7 +220,7 @@
    "outputs": [],
    "source": [
     "def episode(model, max_step=10000):\n",
-    "    env = gym.make('BreakoutNoFrameskip-v4')\n",
+    "    env = gym.make('BreakoutNoFrameskip-v4')#, render_mode='human')\n",
     "    env = AtariPreprocessing(env, noop_max=30)\n",
     "    env = FrameStack(env, num_stack=4)\n",
     "    frames = get_frames(env.reset())\n",
@@ -229,14 +229,16 @@
     "    step = 0\n",
     "\n",
     "    while step < max_step:\n",
+    "        # env.render(mode=\"rgb_array\")\n",
     "        step += 1\n",
     "\n",
     "        action = np.argmax(model(frames).numpy())\n",
+    "        # print(model(frames).numpy())\n",
+    "        # print(action)\n",
     "        frames, reward, done, info = env.step(action)\n",
     "        frames = get_frames(frames)\n",
     "\n",
     "        episode_reward += reward\n",
-    "\n",
     "        if done: \n",
     "            frames = get_frames(env.reset())\n",
     "\n",
@@ -265,9 +267,11 @@
    "outputs": [],
    "source": [
     "def get_start_parameters(model):\n",
-    "    parameters = model.get_weights()\n",
+    "    parameters = model.trainable_weights\n",
+    "    parameters = np.concatenate(parameters, axis=None)\n",
+    "    start_weights = np.random.normal(0, 0.05, parameters.shape)\n",
     "\n",
-    "    return np.concatenate(parameters, axis=None)\n"
+    "    return start_weights\n"
    ]
   },
   {
@@ -278,17 +282,14 @@
    "source": [
     "def get_model_weights(theta, mut_stepsize, e):\n",
     "    model = DQN()\n",
-    "    parameters = model.get_weights()\n",
-    "    new_weights = []\n",
+    "    parameters = model.trainable_weights\n",
     "    start_idx = 0\n",
     "    w = theta + mut_stepsize * e\n",
     "\n",
     "    for p in parameters:\n",
-    "        n = len(p.flatten())\n",
-    "        new_weights.append(w[start_idx:(start_idx+n)].reshape(p.shape))\n",
+    "        n = len(p.numpy().flatten()) if len(p.shape) > 1 else len(p.numpy())\n",
+    "        p.assign(w[start_idx:(start_idx+n)].reshape(p.shape))\n",
     "        start_idx += n\n",
-    "\n",
-    "    model.set_weights(new_weights)\n",
     "    \n",
     "    return model"
    ]
@@ -303,22 +304,25 @@
     "    theta = get_start_parameters(model)\n",
     "    W = get_weights(parents)\n",
     "    best_r = np.zeros((iterations))\n",
+    "    print(theta[:10])\n",
     "    \n",
     "    for t in range(iterations):\n",
     "        print('Iteration: ',t+1)\n",
     "        e = np.zeros((n_offspring, theta.shape[0]))\n",
     "        r = np.zeros((n_offspring))\n",
     "\n",
-    "        for i in range(n_offspring):\n",
-    "            e[i] = np.random.normal(0, mut_stepsize**2, size=theta.shape)\n",
+    "        for i in tqdm(range(n_offspring)):\n",
+    "            e[i] = np.random.normal(0, 1, size=theta.shape)\n",
     "            new_model = get_model_weights(theta, mut_stepsize, e[i])\n",
     "            r[i] = episode(new_model)\n",
     "\n",
     "        best_rs = r.argsort()\n",
     "        best_r[t] = np.max(r)\n",
+    "        print(f\"best reward: {best_r[t]}\")\n",
     "        best_es = e[best_rs][:parents]\n",
     "        \n",
     "        theta += mut_stepsize * np.sum([W[i] * best_es[i] for i in range(len(W))], axis=0)\n",
+    "        print(theta[:10])\n",
     "\n",
     "    return best_r"
    ]
@@ -332,13 +336,73 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[ 0.07258148  0.0232764  -0.00779108  0.01185906 -0.02810984  0.01599544\n",
+      " -0.03274638  0.07308015  0.01139153  0.00517279]\n",
       "Iteration:  1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10/10 [12:22<00:00, 74.27s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "best reward: 0.0\n",
+      "[ 0.0208969   0.00936549  0.0397299   0.0519671   0.02989817 -0.05376135\n",
+      " -0.10670187  0.16139178 -0.01496959 -0.05164074]\n",
+      "Iteration:  2\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10/10 [11:34<00:00, 69.43s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "best reward: 108.0\n",
+      "[ 0.09599988  0.09960373  0.03545748  0.10351636 -0.00076111 -0.13247854\n",
+      " -0.22959453  0.10241194  0.0197796  -0.01089398]\n",
+      "Iteration:  3\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10/10 [11:10<00:00, 67.02s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "best reward: 108.0\n",
+      "[ 0.1431      0.22978684  0.10907066  0.06283911 -0.03580116 -0.07281659\n",
+      " -0.44818027  0.05033631  0.06878754  0.02093752]\n",
+      "Iteration:  4\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 90%|█████████ | 9/10 [13:32<01:50, 110.20s/it]"
      ]
     }
    ],
    "source": [
     "model = DQN()\n",
-    "rewards = CES(model, 0.1, 10, 20, 10)"
+    "rewards = CES(model, 0.1, 5, 10, 5)"
    ]
   },
   {
