--- a/Project/openai.ipynb
+++ b/Project/openai.ipynb
@@ -18,127 +18,185 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "DLL load failed: Kan opgegeven module niet vinden.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_13324\\1659467596.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mgym\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mspaces\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbox\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mBox\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mgym\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcore\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mWrapper\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mcv2\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mImportError\u001b[0m: DLL load failed: Kan opgegeven module niet vinden."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import numpy\n",
+    "import numpy as np\n",
     "import gym\n",
-    "\n",
     "from gym.core import ObservationWrapper\n",
     "from gym.spaces import Box\n",
     "from gym.spaces.box import Box\n",
     "from gym.core import Wrapper\n",
-    "import cv2"
+    "from model import DQN\n",
+    "from gym.wrappers import AtariPreprocessing, FrameStack"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Initiate Environment"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<gym.wrappers.frame_stack.LazyFrames at 0x232d0a21c78>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "class PreprocessAtari(ObservationWrapper):\n",
-    "    def __init__(self, env):\n",
-    "        \"\"\"A gym wrapper that crops, scales image into the desired shapes and optionally grayscales it.\"\"\"\n",
-    "        ObservationWrapper.__init__(self,env)\n",
-    "        \n",
-    "        self.img_size = (84, 84)\n",
-    "        self.observation_space = Box(0.0, 1.0, (self.img_size[0], self.img_size[1], 1))\n",
-    "\n",
-    "    def observation(self, img):\n",
-    "        \"\"\"what happens to each observation\"\"\"\n",
-    "        \n",
-    "        # crop image (top and bottom, top from 34, bottom remove last 16)\n",
-    "        img = img[34:-16, :, :]\n",
-    "        \n",
-    "        # resize image\n",
-    "        img = cv2.resize(img, self.img_size)\n",
-    "        \n",
-    "        img = img.mean(-1,keepdims=True)\n",
-    "        \n",
-    "        img = img.astype('float32') / 255.\n",
-    "              \n",
-    "        return img"
+    "env = gym.make('BreakoutNoFrameskip-v4')\n",
+    "env = AtariPreprocessing(env, noop_max=12)\n",
+    "env = FrameStack(env, num_stack=4)\n",
+    "env.reset()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Environment Details"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of actions: 4\n",
+      "Action meanings: ['NOOP', 'FIRE', 'RIGHT', 'LEFT']\n",
+      "State dimensions: (4, 84, 84)\n"
+     ]
+    }
+   ],
    "source": [
-    "class FrameBuffer(Wrapper):\n",
-    "    def __init__(self, env, n_frames=4, dim_order='tensorflow'):\n",
-    "        \"\"\"A gym wrapper that reshapes, crops and scales image into the desired shapes\"\"\"\n",
-    "        super(FrameBuffer, self).__init__(env)\n",
-    "        self.dim_order = dim_order\n",
-    "        if dim_order == 'tensorflow':\n",
-    "            height, width, n_channels = env.observation_space.shape\n",
-    "            \"\"\"Multiply channels dimension by number of frames\"\"\"\n",
-    "            obs_shape = [height, width, n_channels * n_frames] \n",
-    "        else:\n",
-    "            raise ValueError('dim_order should be \"tensorflow\" or \"pytorch\", got {}'.format(dim_order))\n",
-    "        self.observation_space = Box(0.0, 1.0, obs_shape)\n",
-    "        self.framebuffer = np.zeros(obs_shape, 'float32')\n",
-    "        \n",
-    "    def reset(self):\n",
-    "        \"\"\"resets breakout, returns initial frames\"\"\"\n",
-    "        self.framebuffer = np.zeros_like(self.framebuffer)\n",
-    "        self.update_buffer(self.env.reset())\n",
-    "        return self.framebuffer\n",
-    "    \n",
-    "    def step(self, action):\n",
-    "        \"\"\"plays breakout for 1 step, returns frame buffer\"\"\"\n",
-    "        new_img, reward, done, info = self.env.step(action)\n",
-    "        self.update_buffer(new_img)\n",
-    "        return self.framebuffer, reward, done, info\n",
-    "    \n",
-    "    def update_buffer(self, img):\n",
-    "        if self.dim_order == 'tensorflow':\n",
-    "            offset = self.env.observation_space.shape[-1]\n",
-    "            axis = -1\n",
-    "            cropped_framebuffer = self.framebuffer[:,:,:-offset]\n",
-    "        self.framebuffer = np.concatenate([img, cropped_framebuffer], axis = axis)\n"
+    "n_actions = env.action_space.n\n",
+    "actions_meanings = env.env.get_action_meanings()\n",
+    "state_dim = env.observation_space.shape\n",
+    "print(f\"Number of actions: {n_actions}\")\n",
+    "print(f\"Action meanings: {actions_meanings}\")\n",
+    "print(f\"State dimensions: {state_dim}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## DQN Model Architecture"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " conv2d (Conv2D)             (None, 20, 20, 32)        8224      \n",
+      "                                                                 \n",
+      " batch_normalization (BatchN  (None, 20, 20, 32)       128       \n",
+      " ormalization)                                                   \n",
+      "                                                                 \n",
+      " activation (Activation)     (None, 20, 20, 32)        0         \n",
+      "                                                                 \n",
+      " conv2d_1 (Conv2D)           (None, 9, 9, 64)          32832     \n",
+      "                                                                 \n",
+      " batch_normalization_1 (Batc  (None, 9, 9, 64)         256       \n",
+      " hNormalization)                                                 \n",
+      "                                                                 \n",
+      " activation_1 (Activation)   (None, 9, 9, 64)          0         \n",
+      "                                                                 \n",
+      " conv2d_2 (Conv2D)           (None, 7, 7, 64)          36928     \n",
+      "                                                                 \n",
+      " batch_normalization_2 (Batc  (None, 7, 7, 64)         256       \n",
+      " hNormalization)                                                 \n",
+      "                                                                 \n",
+      " activation_2 (Activation)   (None, 7, 7, 64)          0         \n",
+      "                                                                 \n",
+      " flatten (Flatten)           (None, 3136)              0         \n",
+      "                                                                 \n",
+      " dense (Dense)               (None, 512)               1606144   \n",
+      "                                                                 \n",
+      " batch_normalization_3 (Batc  (None, 512)              2048      \n",
+      " hNormalization)                                                 \n",
+      "                                                                 \n",
+      " activation_3 (Activation)   (None, 512)               0         \n",
+      "                                                                 \n",
+      " dense_1 (Dense)             (None, 4)                 2052      \n",
+      "                                                                 \n",
+      " batch_normalization_4 (Batc  (None, 4)                16        \n",
+      " hNormalization)                                                 \n",
+      "                                                                 \n",
+      " activation_4 (Activation)   (None, 4)                 0         \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 1,688,884\n",
+      "Trainable params: 1,687,532\n",
+      "Non-trainable params: 1,352\n",
+      "_________________________________________________________________\n",
+      "None\n"
+     ]
+    }
+   ],
    "source": [
-    "env = gym.make(\"Breakout-v4\")\n",
-    "env.reset()\n",
+    "model = DQN()\n",
+    "print(model.summary())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Play Breakout"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reward: 0.0\n"
+     ]
+    }
+   ],
+   "source": [
     "episode_reward = 0\n",
-    "i = 0\n",
+    "\n",
     "while True:\n",
-    "    # print(i)\n",
-    "    i += 1\n",
     "    action = env.action_space.sample()\n",
-    "    # print(env.action_space)\n",
-    "    # print(env.observation_space)\n",
-    "    # print(env.env.get_action_meanings())\n",
-    "    # print(action)\n",
+    "    new_img, reward, done, info = env.step(action)\n",
+    "    new_img = new_img.__array__().transpose(1,2,0)\n",
+    "    new_img = np.expand_dims(new_img, axis=0)\n",
+    "    output = np.argmax(model(new_img).numpy())\n",
     "    _, reward, done, _ = env.step(action)\n",
     "    episode_reward += reward\n",
+    "\n",
     "    if done:\n",
     "        print('Reward: %s' % episode_reward)\n",
-    "        break\n",
-    "\n",
-    "# https://www.digitalocean.com/community/tutorials/how-to-build-atari-bot-with-openai-gym\n",
-    "# https://colab.research.google.com/github/GiannisMitr/DQN-Atari-Breakout/blob/master/dqn_atari_breakout.ipynb\n",
-    "# https://www.tensorflow.org/agents/tutorials/1_dqn_tutorial"
+    "        break"
    ]
   },
   {
