--- a/Project/openai.ipynb
+++ b/Project/openai.ipynb
@@ -61,7 +61,7 @@
     {
      "data": {
       "text/plain": [
-       "<gym.wrappers.frame_stack.LazyFrames at 0x19b36b7a6d8>"
+       "<gym.wrappers.frame_stack.LazyFrames at 0x2072ae10778>"
       ]
      },
      "execution_count": 2,
@@ -70,7 +70,7 @@
     }
    ],
    "source": [
-    "env = gym.make('BreakoutNoFrameskip-v4')\n",
+    "env = gym.make(\"MsPacmanNoFrameskip-v4\", full_action_space=False)\n",
     "env = AtariPreprocessing(env, noop_max=30)\n",
     "env = FrameStack(env, num_stack=4)\n",
     "env.reset()"
@@ -92,8 +92,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of actions: 4\n",
-      "Action meanings: ['NOOP', 'FIRE', 'RIGHT', 'LEFT']\n",
+      "Number of actions: 9\n",
+      "Action meanings: ['NOOP', 'UP', 'RIGHT', 'LEFT', 'DOWN', 'UPRIGHT', 'UPLEFT', 'DOWNRIGHT', 'DOWNLEFT']\n",
       "State dimensions: (4, 84, 84)\n"
      ]
     }
@@ -219,8 +219,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def episode(model, max_step=10000):\n",
-    "    env = gym.make('BreakoutNoFrameskip-v4')#, render_mode='human')\n",
+    "def episode(model, max_step=1000):\n",
+    "    env = gym.make(\"MsPacmanNoFrameskip-v4\", full_action_space=False, difficulty=0)#, render_mode='human')\n",
     "    env = AtariPreprocessing(env, noop_max=30)\n",
     "    env = FrameStack(env, num_stack=4)\n",
     "    frames = get_frames(env.reset())\n",
@@ -281,7 +281,7 @@
    "outputs": [],
    "source": [
     "def get_model_weights(theta, mut_stepsize, e):\n",
-    "    model = DQN()\n",
+    "    model = DQN(n_actions=n_actions)\n",
     "    parameters = model.trainable_weights\n",
     "    start_idx = 0\n",
     "    w = theta + mut_stepsize * e\n",
@@ -324,7 +324,7 @@
     "        theta += mut_stepsize * np.sum([W[i] * best_es[i] for i in range(len(W))], axis=0)\n",
     "        print(theta[:10])\n",
     "\n",
-    "    return best_r"
+    "    return theta, best_r"
    ]
   },
   {
@@ -336,8 +336,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.07258148  0.0232764  -0.00779108  0.01185906 -0.02810984  0.01599544\n",
-      " -0.03274638  0.07308015  0.01139153  0.00517279]\n",
+      "[-0.05205936  0.04070268 -0.0220608   0.08905913  0.04503125  0.07260447\n",
+      " -0.04710801 -0.07290872 -0.02711515  0.03268756]\n",
       "Iteration:  1\n"
      ]
     },
@@ -345,16 +345,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [12:22<00:00, 74.27s/it]\n"
+      "100%|██████████| 50/50 [26:06<00:00, 31.33s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "best reward: 0.0\n",
-      "[ 0.0208969   0.00936549  0.0397299   0.0519671   0.02989817 -0.05376135\n",
-      " -0.10670187  0.16139178 -0.01496959 -0.05164074]\n",
+      "best reward: 990.0\n",
+      "[-0.02566253  0.1137029   0.10761209  0.1574765   0.00022604  0.03814883\n",
+      " -0.06759338 -0.01607048 -0.04650887  0.03660903]\n",
       "Iteration:  2\n"
      ]
     },
@@ -362,16 +362,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [11:34<00:00, 69.43s/it]\n"
+      "100%|██████████| 50/50 [15:48<00:00, 18.98s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "best reward: 108.0\n",
-      "[ 0.09599988  0.09960373  0.03545748  0.10351636 -0.00076111 -0.13247854\n",
-      " -0.22959453  0.10241194  0.0197796  -0.01089398]\n",
+      "best reward: 2100.0\n",
+      "[-0.06526319  0.01778081 -0.06980343  0.11568959 -0.00729357  0.01925948\n",
+      " -0.20770697 -0.08873295  0.01296887 -0.03633232]\n",
       "Iteration:  3\n"
      ]
     },
@@ -379,16 +379,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [11:10<00:00, 67.02s/it]\n"
+      "100%|██████████| 50/50 [06:16<00:00,  7.53s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "best reward: 108.0\n",
-      "[ 0.1431      0.22978684  0.10907066  0.06283911 -0.03580116 -0.07281659\n",
-      " -0.44818027  0.05033631  0.06878754  0.02093752]\n",
+      "best reward: 810.0\n",
+      "[-0.07095615  0.07632264 -0.03121932  0.08742649 -0.124931   -0.06529702\n",
+      " -0.26579492 -0.25498386  0.11274938 -0.08395683]\n",
       "Iteration:  4\n"
      ]
     },
@@ -396,22 +396,182 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 90%|█████████ | 9/10 [13:32<01:50, 110.20s/it]"
+      "100%|██████████| 50/50 [06:02<00:00,  7.26s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "best reward: 910.0\n",
+      "[-0.0026821   0.08951439 -0.07962415  0.16489577 -0.26696471 -0.02695128\n",
+      " -0.28409693 -0.22147186  0.17435753 -0.15848622]\n",
+      "Iteration:  5\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 50/50 [06:11<00:00,  7.43s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "best reward: 900.0\n",
+      "[ 0.07862381  0.12079719 -0.02554231  0.05975577 -0.19666054 -0.11967771\n",
+      " -0.27316958 -0.30201955  0.19578908 -0.0803045 ]\n",
+      "Iteration:  6\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 50/50 [06:30<00:00,  7.81s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "best reward: 720.0\n",
+      "[ 0.07089142  0.04107431 -0.02489426  0.06171787 -0.20741754 -0.12004632\n",
+      " -0.22222532 -0.29690343  0.12829221 -0.10407775]\n",
+      "Iteration:  7\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 50/50 [06:20<00:00,  7.61s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "best reward: 810.0\n",
+      "[ 0.15769772  0.07741152  0.00151499  0.13965578 -0.40896551 -0.10349411\n",
+      " -0.2911036  -0.35633912  0.20050068 -0.03206126]\n",
+      "Iteration:  8\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 50/50 [06:18<00:00,  7.57s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "best reward: 880.0\n",
+      "[ 0.13583175 -0.03198896 -0.12007729  0.11511771 -0.47215069 -0.21351076\n",
+      " -0.28118361 -0.31055183  0.16207608  0.06658774]\n",
+      "Iteration:  9\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 50/50 [06:19<00:00,  7.59s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "best reward: 1160.0\n",
+      "[ 0.05028823  0.00685562  0.09845939  0.08804207 -0.55685729 -0.25314192\n",
+      " -0.29756117 -0.24171206  0.18645404  0.03453927]\n",
+      "Iteration:  10\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 50/50 [06:16<00:00,  7.53s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "best reward: 460.0\n",
+      "[ 0.06501877  0.00083214  0.07168865  0.12378689 -0.58913027 -0.18212103\n",
+      " -0.31133053 -0.26802314  0.21158104  0.09380176]\n"
      ]
     }
    ],
    "source": [
-    "model = DQN()\n",
-    "rewards = CES(model, 0.1, 5, 10, 5)"
+    "model = DQN(n_actions=n_actions)\n",
+    "theta, rewards = CES(model, 0.1, 5, 50, 10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 990. 2100.  810.  910.  900.  720.  810.  880. 1160.  460.]\n"
+     ]
+    }
+   ],
    "source": [
     "print(rewards)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "120.0"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model = get_model_weights(theta, 0, theta)\n",
+    "episode(model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "env.unwrapped.ale.getAvailableDifficulties()"
    ]
   },
   {
