Added parent selection methods

--- a/Project/AtariCES.ipynb
+++ b/Project/AtariCES.ipynb
@@ -55,7 +55,7 @@
    "source": [
     "game = \"SpaceInvaders\"\n",
     "render = False\n",
-    "max_step = 1000"
+    "max_step = 2500"
    ]
   },
   {
@@ -71,10 +71,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sigma = 0.25\n",
-    "n_offspring = 15\n",
-    "n_parents = 3\n",
-    "iterations = 10"
+    "sigma = 0.3\n",
+    "n_offspring = 35\n",
+    "n_parents = 5\n",
+    "iterations = 10\n",
+    "parent_selection = \"topn\" # \"topn\", random\", \"tournament\""
    ]
   },
   {
@@ -91,7 +92,8 @@
    "outputs": [],
    "source": [
     "CAF = CAF(game, render, max_step=max_step, sigma=sigma,\n",
-    "        n_parents=n_parents, n_offspring=n_offspring, iterations=iterations)\n",
+    "        n_parents=n_parents, n_offspring=n_offspring, iterations=iterations,\n",
+    "        parent_selection=parent_selection)\n",
     "        \n",
     "env, n_actions, actions_meanings, state_dim = CAF.initiate_env()\n"
    ]
@@ -227,16 +229,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 15/15 [02:16<00:00,  9.09s/it]\n"
+      "100%|██████████| 35/35 [10:31<00:00, 18.03s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "reward: [390. 390. 390. 390. 390. 390. 390. 390. 390.   0.   0.   0.   0.   0.\n",
-      "   0.]\n",
-      "best reward: 390.0\n",
+      "best reward: 1315.0\n",
       "Iteration:  2\n"
      ]
     },
@@ -244,16 +244,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 15/15 [02:22<00:00,  9.47s/it]\n"
+      "100%|██████████| 35/35 [10:03<00:00, 17.25s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "reward: [390. 390. 390. 390. 390. 390. 390. 390. 390. 390. 390. 390. 390. 390.\n",
-      " 390.]\n",
-      "best reward: 390.0\n",
+      "best reward: 1315.0\n",
       "Iteration:  3\n"
      ]
     },
@@ -261,16 +259,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 15/15 [02:04<00:00,  8.33s/it]\n"
+      "100%|██████████| 35/35 [10:05<00:00, 17.29s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "reward: [390. 390. 390. 390. 390. 390. 390. 390. 390. 390. 390. 390. 390.   0.\n",
-      "   0.]\n",
-      "best reward: 390.0\n",
+      "best reward: 1315.0\n",
       "Iteration:  4\n"
      ]
     },
@@ -278,16 +274,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 15/15 [02:08<00:00,  8.57s/it]\n"
+      "100%|██████████| 35/35 [10:02<00:00, 17.20s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "reward: [520. 390. 390. 390. 390. 390. 390. 390. 390. 390. 390. 390. 390. 390.\n",
-      " 390.]\n",
-      "best reward: 520.0\n",
+      "best reward: 1315.0\n",
       "Iteration:  5\n"
      ]
     },
@@ -295,16 +289,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 15/15 [02:04<00:00,  8.33s/it]\n"
+      "100%|██████████| 35/35 [10:25<00:00, 17.87s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "reward: [520. 520. 520. 520. 520. 520. 520. 520. 520. 390. 390. 390. 390. 390.\n",
-      " 390.]\n",
-      "best reward: 520.0\n",
+      "best reward: 1315.0\n",
       "Iteration:  6\n"
      ]
     },
@@ -312,16 +304,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 15/15 [02:09<00:00,  8.62s/it]\n"
+      "100%|██████████| 35/35 [10:28<00:00, 17.97s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "reward: [520. 520. 520. 520. 520. 520. 520. 520. 520. 490. 430. 390. 390. 390.\n",
-      " 390.]\n",
-      "best reward: 520.0\n",
+      "best reward: 1315.0\n",
       "Iteration:  7\n"
      ]
     },
@@ -329,16 +319,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 15/15 [02:10<00:00,  8.72s/it]\n"
+      "100%|██████████| 35/35 [10:27<00:00, 17.92s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "reward: [520. 520. 520. 520. 520. 520. 520. 520. 520. 520. 520. 520. 520. 520.\n",
-      " 400.]\n",
-      "best reward: 520.0\n",
+      "best reward: 1315.0\n",
       "Iteration:  8\n"
      ]
     },
@@ -346,16 +334,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 15/15 [02:05<00:00,  8.33s/it]\n"
+      "100%|██████████| 35/35 [10:53<00:00, 18.68s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "reward: [520. 520. 520. 520. 520. 520. 520. 520. 390. 390. 390. 390. 390. 390.\n",
-      " 320.]\n",
-      "best reward: 520.0\n",
+      "best reward: 1315.0\n",
       "Iteration:  9\n"
      ]
     },
@@ -363,16 +349,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 15/15 [02:14<00:00,  8.96s/it]\n"
+      "100%|██████████| 35/35 [10:29<00:00, 17.99s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "reward: [520. 520. 520. 520. 520. 520. 520. 520. 520. 485. 430. 390. 390. 390.\n",
-      " 180.]\n",
-      "best reward: 520.0\n",
+      "best reward: 1315.0\n",
       "Iteration:  10\n"
      ]
     },
@@ -380,23 +364,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 15/15 [02:04<00:00,  8.28s/it]"
+      "100%|██████████| 35/35 [10:28<00:00, 17.97s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "reward: [520. 520. 520. 390. 390. 390. 390. 390. 390. 390. 390. 390. 390. 390.\n",
-      " 390.]\n",
-      "best reward: 520.0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "best reward: 1315.0\n"
      ]
     }
    ],
@@ -427,6 +402,13 @@
    "source": [
     "CAF.show_last(theta, max_step=max_step)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
