Added uniform weights for new parent selection methods

--- a/Project/AtariCES.ipynb
+++ b/Project/AtariCES.ipynb
@@ -72,10 +72,10 @@
    "outputs": [],
    "source": [
     "sigma = 0.3\n",
-    "n_offspring = 35\n",
+    "n_offspring = 25\n",
     "n_parents = 5\n",
     "iterations = 10\n",
-    "parent_selection = \"topn\" # \"topn\", random\", \"tournament\""
+    "parent_selection = \"tournament\" # \"topn\", random\", \"tournament\""
    ]
   },
   {
@@ -229,13 +229,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 35/35 [10:31<00:00, 18.03s/it]\n"
+      "100%|██████████| 25/25 [09:06<00:00, 21.88s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[   0.    0.    0.    0.    0.    0. 1315.    0.    0.    0.    0. 1315.\n",
+      "    0. 1315.    0. 1315.    0.  960. 1315. 1315. 1315.  960. 1315.  960.\n",
+      "    0.]\n",
       "best reward: 1315.0\n",
       "Iteration:  2\n"
      ]
@@ -244,13 +247,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 35/35 [10:03<00:00, 17.25s/it]\n"
+      "100%|██████████| 25/25 [08:58<00:00, 21.54s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[1315. 1080. 1315.    0. 1315.    0.    0. 1315. 1315. 1315. 1315.    0.\n",
+      " 1315. 1315.  960. 1315.    0. 1315. 1315.  960. 1315.    0.    0.    0.\n",
+      "    0.]\n",
       "best reward: 1315.0\n",
       "Iteration:  3\n"
      ]
@@ -259,13 +265,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 35/35 [10:05<00:00, 17.29s/it]\n"
+      "100%|██████████| 25/25 [08:08<00:00, 19.52s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[1315.  960.  960. 1315. 1315. 1315. 1315. 1315. 1315.  960. 1315. 1315.\n",
+      " 1315. 1315. 1315. 1315. 1315.    0.    0. 1315. 1315. 1315. 1315. 1315.\n",
+      " 1315.]\n",
       "best reward: 1315.0\n",
       "Iteration:  4\n"
      ]
@@ -274,13 +283,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 35/35 [10:02<00:00, 17.20s/it]\n"
+      "100%|██████████| 25/25 [07:11<00:00, 17.25s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[1315. 1315. 1315. 1315. 1315. 1315. 1315. 1315.    0.    0. 1315. 1315.\n",
+      " 1315. 1315. 1315. 1315. 1315. 1315. 1315. 1315. 1315. 1315. 1315. 1315.\n",
+      " 1315.]\n",
       "best reward: 1315.0\n",
       "Iteration:  5\n"
      ]
@@ -289,13 +301,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 35/35 [10:25<00:00, 17.87s/it]\n"
+      "100%|██████████| 25/25 [07:08<00:00, 17.13s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[1315.    0.    0. 1315.    0.    0. 1315. 1315. 1315. 1315.  960. 1315.\n",
+      " 1315. 1315.    0. 1315. 1315. 1315.    0.    0.    0.    0. 1315. 1315.\n",
+      " 1315.]\n",
       "best reward: 1315.0\n",
       "Iteration:  6\n"
      ]
@@ -304,13 +319,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 35/35 [10:28<00:00, 17.97s/it]\n"
+      "100%|██████████| 25/25 [07:15<00:00, 17.42s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[1315. 1315. 1315. 1315.    0. 1315.    0. 1315.    0. 1315.    0. 1315.\n",
+      " 1315. 1315. 1315. 1315.    0. 1315. 1315. 1315. 1315. 1315. 1315. 1315.\n",
+      " 1315.]\n",
       "best reward: 1315.0\n",
       "Iteration:  7\n"
      ]
@@ -319,13 +337,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 35/35 [10:27<00:00, 17.92s/it]\n"
+      "100%|██████████| 25/25 [07:14<00:00, 17.40s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[1315. 1315. 1315. 1315. 1315. 1315. 1315. 1315. 1315. 1315. 1315. 1315.\n",
+      " 1315. 1315. 1315. 1315. 1315. 1315. 1315. 1315. 1315. 1315. 1315. 1315.\n",
+      " 1315.]\n",
       "best reward: 1315.0\n",
       "Iteration:  8\n"
      ]
@@ -334,13 +355,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 35/35 [10:53<00:00, 18.68s/it]\n"
+      "100%|██████████| 25/25 [07:03<00:00, 16.96s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[1315. 1315. 1315. 1315. 1315. 1315. 1315. 1315. 1315. 1315. 1315. 1315.\n",
+      " 1315. 1315. 1315. 1315. 1315. 1315. 1315. 1315. 1315. 1315. 1315. 1315.\n",
+      " 1315.]\n",
       "best reward: 1315.0\n",
       "Iteration:  9\n"
      ]
@@ -349,14 +373,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 35/35 [10:29<00:00, 17.99s/it]\n"
+      "100%|██████████| 25/25 [07:10<00:00, 17.20s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "best reward: 1315.0\n",
+      "[1315. 1315. 1315. 1315. 1315. 1315. 1315. 1440. 1315. 1315. 1315.  960.\n",
+      " 1315. 1315. 1315. 1315. 1315. 1315. 1315. 1315. 1315. 1315. 1315. 1315.\n",
+      " 1315.]\n",
+      "best reward: 1440.0\n",
       "Iteration:  10\n"
      ]
     },
@@ -364,14 +391,24 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 35/35 [10:28<00:00, 17.97s/it]\n"
+      "100%|██████████| 25/25 [07:03<00:00, 16.94s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[1315. 1315. 1315. 1315. 1315. 1315. 1315. 1315. 1315. 1315. 1315. 1315.\n",
+      " 1315. 1315. 1315. 1315. 1315. 1315. 1315. 1315. 1315. 1315. 1315. 1315.\n",
+      " 1315.]\n",
       "best reward: 1315.0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
